<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="5"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/a_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_id"
            android:textSize="18dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/a_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_name"
            android:textSize="18dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/a_email_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/all_email"
            android:textSize="18dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/a_birthday_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/all_birthday"
            android:textSize="18dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/a_phone_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/all_phone"
            android:textSize="18dp"
            android:textStyle="bold" />



</LinearLayout>
