<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:weightSum="5">
    <TextView
            android:layout_margin="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:text="View Api using ListView"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/all_id"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/r_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/all_name"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/r_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/all_email"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/r_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textStyle="bold"/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Address"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/r_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Gender"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/r_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Mobile"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/r_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Home"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/r_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="Office"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/r_office"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Action"
                android:textColor="?attr/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold"/>

        <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Delete"
                android:textColor="@android:color/holo_red_dark"/>

        <Button
                android:id="@+id/update_user_by_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:shadowColor="@android:color/holo_green_dark"
                android:text="Update"
                android:textColor="@android:color/holo_green_light"/>
    </LinearLayout>


</LinearLayout>
